Wed Nov 29 15:46:38 EST 2006	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c fixed broken "go" option handling.

Tue Nov 28 11:52:27 EST 2006	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c fix -o option code
	* src/tds/net.c reorganize tds_open_socket()
	
Mon Nov 27 18:31:18 EST 2006	JK Lowden <jklowden@freetds.org>
	* src/tds/net.c more detailed log of connect(2)

Sun Nov 26 15:26:31 EST 2006	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c added connection timer feedback
	* src/tds/login.c src/tds/net.c slightly better logging

Thu Nov 23 09:43:00 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/genparams.c:
	- fix possible problem with very remote servers

Thu Oct 26 15:09:48 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/dblib/dbutil.c log error message from server
	* src/tds/net.c log TDS version

Thu Oct 26 14:26:27 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/dblib/unittests/common.c src/dblib/unittests/common.h
	* src/dblib/unittests/t0001.c
	- corrected command-line option handling

Sat Oct 21 16:42:08 EDT 2006	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/unittests/t0022.c:
	- dbresults succeeds if metadata or only return status is
	- present, cf. ML yesterday.

Sat Oct 21 14:22:44 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* autogen.sh: fix some portability issues

Wed Oct 18 21:38:57 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/tables.c:
	- fix problem with mssql2005 and SQLTables

Mon Oct 16 09:48:31 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: reduce system calls required

Thu Oct 12 11:19:02 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c:
	- fix wrong assert
	- return correctly RETURNSTATUS under Sybase

Wed Oct 11 16:37:04 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix wrong assert using numerics
